<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context="com.derekudacityclassprojects.bakingapp.IngredientsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Ingredients"/>
        <TextView
            android:id="@+id/ingredients_activity_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"/>
    </LinearLayout>
</ScrollView>
