<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical"
    tools:context="com.derekudacityclassprojects.bakingapp.FragmentRecipeStepList.RecipeStepListFragment">

    <Button
        android:id="@+id/recipe_step_list_ingredients_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ingredients"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_step_list_recycler_view"
        android:name="com.derekudacityclassprojects.bakingapp.FragmentRecipeStepList.RecipeStepItemFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="LinearLayoutManager"
        tools:context="com.derekudacityclassprojects.bakingapp.FragmentRecipeStepList.RecipeStepListFragment"
        tools:listitem="@layout/fragment_recipestepitem" />
</LinearLayout>